<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/latitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="4dp"
        android:text="@string/latitudeLabel"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/latitudValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/latitudeLabel"
        android:layout_toRightOf="@id/latitudeLabel"
        android:textColor="#ff0000"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/longitudeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeLabel"
        android:layout_marginRight="4dp"
        android:text="@string/LongitudeLabel"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/longitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/longitudeLabel"
        android:layout_toRightOf="@id/longitudeLabel"
        android:textColor="#ff0000"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/providerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitudeLabel"
        android:layout_marginRight="4dp"
        android:text="@string/providerLabel"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/providerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/providerLabel"
        android:layout_toRightOf="@id/providerLabel"
        android:textColor="#ff0000"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/accuracyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/providerLabel"
        android:layout_marginRight="4dp"
        android:text="@string/accuracyLabel"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/accuracyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/accuracyLabel"
        android:layout_toRightOf="@id/accuracyLabel"
        android:textColor="#ff0000"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/accuracyUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/accuracyLabel"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/accuracyValue"
        android:text="@string/metersUnit"
        android:textColor="#ff00a0"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/timeToFixLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accuracyLabel"
        android:layout_marginRight="4dp"
        android:text="@string/timeToFixLabel"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/timeToFixValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/timeToFixLabel"
        android:layout_toRightOf="@id/timeToFixLabel"
        android:textColor="#ff0000"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/timeToFixUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/timeToFixLabel"
        android:layout_marginLeft="4dp"
        android:layout_toRightOf="@id/timeToFixValue"
        android:text="@string/secondsUnit"
        android:textColor="#ff00a0"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/enableProvidersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeToFixLabel"
        android:layout_marginRight="4dp"
        android:text="@string/providerLabel"
        android:textSize="22dp" />

    <TextView
        android:id="@+id/enabledProvidersValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/enableProvidersLabel"
        android:layout_toRightOf="@id/enableProvidersLabel"
        android:textColor="#ff0000"
        android:textSize="22dp" />

    <Button
        android:id="@+id/changeLocationProviderSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="onChangeLocationProvidersSettingsClick"
        android:text="@string/changeLocationProvidersSettingsText" />

    <Button
        android:id="@+id/btnShowOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/changeLocationProviderSettings"
        android:onClick="showOnMapClick"
        android:text="@string/showPosition" />

</RelativeLayout>

